[tool.poetry]
name = "pdf-display"
version = "0.1.0"
description = "PDF display strategies for benchamrking"
authors = ["Your Name <your@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7"
streamlit = "1.49.0"
pymupdf = ">=1.24.0"
streamlit-pdf = "1.0.8"
streamlit-pdf-viewer = ">=0.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"